--- a/sketch.css
+++ b/sketch.css
@@ -10,6 +10,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     width: 480px;
+    height: 480px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.426);
 }
 
@@ -19,13 +20,12 @@ header {
 }
 
 .box {
-    width: 30px;
-    height: 30px;
-    border: 0.2px solid black;
-    box-sizing: border-box;
-  
+    background-color: rgb(255, 255, 255);
 }
 button{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: 1.05em;
     background-color: rgba(104, 104, 104, 0.267);
     width: 170px;
     height: 45px;
@@ -56,3 +56,48 @@ button{
     font-size: 2.2em;
     font-family: monospace;
 }
+
+.slidecontainer {
+    background-color: pink;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    background-color: rgba(255, 99, 71, 0);
+    transition: transform 1s;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+}
+#colorpick {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    width: 100px;
+    height: 100px;
+    border-radius: 20%;
+}
+#colorpick::-webkit-color-swatch {
+    border-radius: 20%;
+    box-shadow: 0px 3px 3px rgb(0, 0, 0, 0.3);
+}
+
+#sliderValue { 
+    font-size: 20px;
+    font-family: monospace;
+    font-weight: bold;
+}
+ .slider {
+    width: 150px;
+      appearance: none;
+      height: 10px;
+      border-radius: 5px;
+      outline: none;
+      margin-bottom: 20px;
+      cursor: pointer;
+      background-color: rgb(73, 73, 73);
+      
+ }
+ 
